# netsuite

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  codecov.yml
docs/: index.md
netsuite/: __init__.py  config.py  json.py  oauth2.py  odbc.py  rest_api.py  rest_api_base.py
netsuite/cli/: misc.py
netsuite/soap_api/: client.py  decorators.py
tests/: conftest.py  test_cli.py  test_cli_main.py  test_cli_rest_api.py  test_cli_restlet.py  test_client.py  test_config.py  test_exceptions.py  test_json.py  test_oauth2.py  test_oauth2_integration.py  test_odbc.py  test_rest_api.py  test_rest_api_base.py  test_restlet.py  test_soap_api.py  test_soap_api_decorators.py  test_soap_api_decorators_edge_cases.py  test_soap_api_deprecation.py  test_soap_api_passport.py  test_soap_api_transports.py
