[tool.poetry]
name = "netsuite"
version = "0.12.0"
description = "Make async requests to NetSuite SuiteTalk SOAP/REST Web Services and Restlets"
authors = [
    "Jacob Magnusson <m@jacobian.se>",
    "Mike Bianco <mike@mikebian.co>",
    "Vicente Louvet III <louvetvicente@gmail.com>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vlouvet/netsuite"
repository = "https://github.com/vlouvet/netsuite"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = ">=3.9"
authlib = ">=1,<3"
# As per httpx recommendation we will lock to a fixed minor version until 1.0 is released
httpx = ">=0.25,<0.29"
# Used directly by netsuite/oauth2.py for JWT signing. Newer authlib pulls
# this in transitively, but older authlib in our `>=1,<3` range does not,
# so declare it explicitly to keep CI installs deterministic.
joserfc = ">=1,<2"
pydantic = "^2.4.2"
orjson = { version = "~3", optional = true }
ipython = { version = "~8", optional = true, python = "^3.9" }
zeep = { version = "~4", optional = true, extras = ["async"] }
pyodbc = { version = "^5.0.1", optional = true }
oauthlib = "~3"

[tool.poetry.extras]
odbc = ["pyodbc"]
soap_api = ["zeep"]
cli = ["ipython"]
orjson = ["orjson"]
# TODO doesn't --all-extras solve this for us?
all = ["zeep", "ipython", "orjson", "odbc"]

[tool.poetry.dev-dependencies]
black = "~24"
flake8 = "~7"
isort = "~6"
mkdocs-material = "~9"
mypy = ">=1,<3"
pytest = "~8"
pytest-asyncio = "~0.23"
pytest-cov = "~6"
types-setuptools = "^75.8.2"
types-requests = "^2.27.30"

[tool.poetry.scripts]
netsuite = 'netsuite.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
asyncio_mode = "strict"
# The SOAP DeprecationWarning is intentional and tested explicitly in
# test_soap_api_deprecation. Silence it in every other test path so the
# pytest summary stays useful for surfacing real warnings.
filterwarnings = [
    "default",
    "ignore:NetSuite has announced that SOAP Web Services:DeprecationWarning",
]
