[project]
name = "netsuite"
version = "0.12.0"
description = "Make async requests to NetSuite SuiteTalk SOAP/REST Web Services and Restlets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Jacob Magnusson", email = "m@jacobian.se" },
    { name = "Mike Bianco", email = "mike@mikebian.co" },
    { name = "Vicente Louvet III", email = "louvetvicente@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "authlib>=1,<3",
    # As per httpx recommendation we lock to a fixed minor range until 1.0.
    "httpx>=0.25,<0.29",
    # Used directly by netsuite/oauth2.py for JWT signing. Newer authlib
    # pulls this in transitively but older authlib in our >=1,<3 range
    # does not — declare it explicitly so CI installs are deterministic.
    "joserfc>=1,<2",
    "oauthlib>=3,<4",
    "pydantic>=2.4.2,<3",
]

[project.optional-dependencies]
odbc = ["pyodbc>=5.0.1,<6"]
soap_api = ["zeep[async]>=4,<5"]
cli = ["ipython>=8,<9"]
orjson = ["orjson>=3,<4"]
all = [
    "pyodbc>=5.0.1,<6",
    "zeep[async]>=4,<5",
    "ipython>=8,<9",
    "orjson>=3,<4",
]

[project.scripts]
netsuite = "netsuite.cli:main"

[project.urls]
Homepage = "https://github.com/vlouvet/netsuite"
Repository = "https://github.com/vlouvet/netsuite"

[tool.poetry]
# Poetry-specific block. Project metadata lives in [project] above; this
# section only carries the bits Poetry needs that PEP 621 doesn't cover.

[tool.poetry.group.dev.dependencies]
black = "~24"
flake8 = "~7"
isort = "~6"
mkdocs-material = "~9"
mypy = ">=1,<3"
pytest = "~8"
pytest-asyncio = "~0.23"
pytest-cov = "~5"
types-setuptools = "^75.8.2"
types-requests = "^2.27.30"

[build-system]
requires = ["poetry-core>=2"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
asyncio_mode = "strict"
# The SOAP DeprecationWarning is intentional and tested explicitly in
# test_soap_api_deprecation. Silence it in every other test path so the
# pytest summary stays useful for surfacing real warnings.
filterwarnings = [
    "default",
    "ignore:NetSuite has announced that SOAP Web Services:DeprecationWarning",
]
